<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/set_as"
        android:title="@string/set_as" />
    <item
        android:id="@+id/print"
        android:title="@string/print" />
    <item
        android:id="@+id/slideshow"
        android:title="@string/slideshow" />
    <item
        android:id="@+id/details"
        android:title="@string/details" />
    <item
        android:id="@+id/delete"
        android:title="@string/delete" />

</menu>