<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/selectAll"
        android:icon="@drawable/ic_action_select_all"
        android:title="@string/selectAll"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/exclude"
        android:title="@string/exclude"
        app:showAsAction="never" />
    <item
        android:id="@+id/copyTo"
        android:title="@string/copy_to"
        app:showAsAction="never" />
    <item
        android:id="@+id/moveTo"
        android:title="@string/move_to"
        app:showAsAction="never" />
    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/details"
        android:title="@string/details"
        app:showAsAction="never" />

</menu>